test/static/wrong/case5.kk.out
test/static/wrong/case5.kk(5,15): error: type aInt should be cased as aint