test/static/wrong/case5.kk
// case sensitivity
import modA = static/modA
import static/modB

alias wrong = modA/aInt
